fixed table spacing, fixed profile menu highlight

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -34,7 +34,7 @@ html {
         content: '';
         content: none; }
     html body strong {
-      font-weight: bold; }
+      font-weight: 600; }
     html body input {
       outline: none; }
     html body table {
@@ -79,7 +79,8 @@ section > h1 {
 section h2 {
   font-size: 17px;
   font-weight: 600;
-  margin-bottom: 15px; }
+  margin-bottom: 15px;
+  line-height: 20px; }
   section h2 a {
     font-size: 12px;
     font-weight: 400; }
@@ -185,15 +186,19 @@ body {
           border-radius: 5px;
           border-top-right-radius: 0;
           display: none;
-          padding: 10px 15px;
+          padding: 3px 0;
           position: absolute;
           right: 0;
           width: 100%;
+          min-width: 160px;
           -webkit-box-shadow: -3px 3px 0px rgba(0, 0, 0, 0.3);
           -moz-box-shadow: -3px 3px 0px rgba(0, 0, 0, 0.3);
-          box-shadow: -3px 3px 0px rgba(0, 0, 0, 0.3); }
+          box-shadow: -3px 3px 0px rgba(0, 0, 0, 0.3);
+          overflow: hidden; }
           body > header > div div#profile > ul > li {
-            padding: 5px 0; }
+            padding: 7px 15px; }
+            body > header > div div#profile > ul > li:hover {
+              background: #111; }
             body > header > div div#profile > ul > li a {
               color: #ccc; }
         body > header > div div#profile.active > ul {
@@ -492,42 +497,42 @@ table {
   table tr[data-status] td {
     padding: 10px 5px; }
     table tr[data-status] td:first-child {
-      padding: 10px 5px 10px 25px; }
+      padding: 10px 5px 10px 20px; }
       table tr[data-status] td:first-child:before {
         content: ' ';
         height: 35px;
-        width: 15px;
+        width: 10px;
         position: absolute;
         left: 0;
         margin-top: -10px; }
   table tr[data-status='loading'] td:first-child:before {
     background: #bbbbbb url("http://assets.ambient.ly/bitlancer/status.png");
-    background-size: 100% 50%;
+    background-size: 200% 50%;
     background-position: 0 0;
-    -webkit-box-shadow: 1px 0 0 #bbbbbb, inset -1px 0 0 rgba(255, 255, 255, 0.2);
-    -moz-box-shadow: 1px 0 0 #bbbbbb, inset -1px 0 0 rgba(255, 255, 255, 0.2);
-    box-shadow: 1px 0 0 #bbbbbb, inset -1px 0 0 rgba(255, 255, 255, 0.2); }
+    -webkit-box-shadow: 1px 0 0 #bbbbbb;
+    -moz-box-shadow: 1px 0 0 #bbbbbb;
+    box-shadow: 1px 0 0 #bbbbbb; }
   table tr[data-status='error'] td:first-child:before {
     background: #d94141 url("http://assets.ambient.ly/bitlancer/status.png");
-    background-size: 100% 50%;
+    background-size: 200% 50%;
     background-position: 0 0;
-    -webkit-box-shadow: 1px 0 0 #d94141, inset -1px 0 0 rgba(255, 255, 255, 0.2);
-    -moz-box-shadow: 1px 0 0 #d94141, inset -1px 0 0 rgba(255, 255, 255, 0.2);
-    box-shadow: 1px 0 0 #d94141, inset -1px 0 0 rgba(255, 255, 255, 0.2); }
+    -webkit-box-shadow: 1px 0 0 #d94141;
+    -moz-box-shadow: 1px 0 0 #d94141;
+    box-shadow: 1px 0 0 #d94141; }
   table tr[data-status='running'] td:first-child:before {
     background: #59b036 url("http://assets.ambient.ly/bitlancer/status.png");
-    background-size: 100% 50%;
+    background-size: 200% 50%;
     background-position: 0 0;
-    -webkit-box-shadow: 1px 0 0 #59b036, inset -1px 0 0 rgba(255, 255, 255, 0.2);
-    -moz-box-shadow: 1px 0 0 #59b036, inset -1px 0 0 rgba(255, 255, 255, 0.2);
-    box-shadow: 1px 0 0 #59b036, inset -1px 0 0 rgba(255, 255, 255, 0.2); }
+    -webkit-box-shadow: 1px 0 0 #59b036;
+    -moz-box-shadow: 1px 0 0 #59b036;
+    box-shadow: 1px 0 0 #59b036; }
   table tr[data-status='warning'] td:first-child:before {
     background: #ffb33d url("http://assets.ambient.ly/bitlancer/status.png");
-    background-size: 100% 50%;
+    background-size: 200% 50%;
     background-position: 0 0;
-    -webkit-box-shadow: 1px 0 0 #ffb33d, inset -1px 0 0 rgba(255, 255, 255, 0.2);
-    -moz-box-shadow: 1px 0 0 #ffb33d, inset -1px 0 0 rgba(255, 255, 255, 0.2);
-    box-shadow: 1px 0 0 #ffb33d, inset -1px 0 0 rgba(255, 255, 255, 0.2); }
+    -webkit-box-shadow: 1px 0 0 #ffb33d;
+    -moz-box-shadow: 1px 0 0 #ffb33d;
+    box-shadow: 1px 0 0 #ffb33d; }
   table tr.activity td:first-child:before {
     -webkit-animation: activity 0.75s infinite alternate;
     -moz-animation: activity 0.75s infinite alternate;
@@ -541,7 +546,7 @@ table {
   position: relative; }
   .dataTables_wrapper .dataTables_length {
     float: left;
-    padding-bottom: 10px; }
+    padding: 2px 0 0 0; }
   .dataTables_wrapper .dataTables_filter {
     float: right;
     padding-bottom: 10px; }
