--- a/assets/sass/reset.scss
+++ b/assets/sass/reset.scss
@@ -39,7 +39,7 @@ html {
       }
     }
     strong {
-      font-weight: bold;
+      font-weight: 600;
     }
     input {
       outline: none;
