--- a/assets/sass/typography.scss
+++ b/assets/sass/typography.scss
@@ -36,6 +36,7 @@ section {
     font-size: 17px;
     font-weight: 600;
     margin-bottom: 15px;
+    line-height: 20px;
     a {
       font-size: 12px;
       font-weight: 400;
